null input data fix and winner text invisibility upon tie

--- a/styles.css
+++ b/styles.css
@@ -57,7 +57,7 @@ footer{
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
-  width:22%;
+  width:32%;
 }
 
 .resetBtn {
@@ -70,5 +70,5 @@ footer{
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
-  width:22%;
+  width:32%;
 }
